--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,47 @@
 name: Demo GitHub Actions Workflow
 
-# 该工作流展示了 GitHub Actions 的两种触发方式：
-#  - push: 当代码被推送到默认分支时
-#  - schedule: 根据 cron 表达式定时运行【569932550132912†L1626-L1649】
-
 on:
-  # 当任何分支有提交时触发（可以根据需要限定到 `main` 或 `master`）
+  # 任何分支的 push 都触发，便于调试
   push:
-    branches: [ "main" ]
-  # 使用 POSIX cron 语法的定时触发【569932550132912†L1651-L1669】
+    branches:
+      - '**'
+  # 手动触发按钮（Actions 页 → 选中工作流 → Run workflow）
+  workflow_dispatch:
+  # 定时（UTC），每 15 分钟一次，便于观察
   schedule:
-    - cron: '0 18 * * *'  # 每日 18:00 UTC 运行，具体时间可根据需要调整
+    - cron: '*/15 * * * *'
 
 jobs:
-  build:
-    # 指定运行环境
+  demo:
     runs-on: ubuntu-latest
-    # 注入环境变量，读取仓库设置的 secrets；如果某些值未设置，脚本会自行判断【732225639440178†L488-L520】
-    env:
-      SMTP_HOST: ${{ secrets.SMTP_HOST }}
-      SMTP_PORT: ${{ secrets.SMTP_PORT }}
-      SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
-      SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-      EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
-      EMAIL_RECIPIENT: ${{ secrets.EMAIL_RECIPIENT }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v5
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Show runner info
+        run: |
+          echo "Actor: $GITHUB_ACTOR"
+          echo "Repo:  $GITHUB_REPOSITORY"
+          echo "Ref:   $GITHUB_REF"
+          echo "SHA:   $GITHUB_SHA"
+          date -u
+
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: '3.x'
 
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
-
-      - name: Run scheduled task script
+      - name: Run scheduled_task.py
         run: python scripts/scheduled_task.py
 
-      - name: Send email (if secrets configured)
-        run: python scripts/send_email.py
+      - name: (Optional) Try send_email.py
+        # 没有配好环境变量就不会发送，只打印提示
+        env:
+          SMTP_HOST: ${{ secrets.SMTP_HOST }}
+          SMTP_PORT: ${{ secrets.SMTP_PORT }}
+          SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
+          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+          EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
+          EMAIL_RECIPIENT: ${{ secrets.EMAIL_RECIPIENT }}
+        run: |
+          python scripts/send_email.py || true
