change schedule to every day

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,9 @@ on:
       - '**'
   # 手动触发按钮（Actions 页 → 选中工作流 → Run workflow）
   workflow_dispatch:
-  # 定时（UTC），每 15 分钟一次，便于观察
+  # 定时（UTC），每天一次，便于观察
   schedule:
-    - cron: '*/15 * * * *'
+    - cron: '0 0 * * *'
 
 jobs:
   demo:
