--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,8 +47,8 @@ jobs:
           git push
 
       - name: Send email via Gmail SMTP
-        # 只在定时任务或手动触发时发送邮件，推送代码时不发送
-        if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+        # 定时、手动触发或推送日志包含 run 时发送邮件
+        if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || (github.event_name == 'push' && contains(join(github.event.commits.*.message, ' '), 'run'))
         env:
           SMTP_HOST: smtp.gmail.com
           SMTP_PORT: 587
