--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,6 @@ jobs:
           SMTP_PORT: 587
           GMAIL_USERNAME: ${{ secrets.GMAIL_USERNAME }}
           GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
-          EMAIL_TO: ${{ secrets.EMAIL_TO != '' && format('your-email@example.com,{0}', secrets.EMAIL_TO) || 'your-email@example.com' }}
+          EMAIL_TO: ${{ secrets.EMAIL_TO }}
         run: |
           python scripts/send_email.py
